[package]
name = "smt_contracts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.1"
sparse-merkle-tree = { path = "../../deps/sparse-merkle-tree", default-features = false, features = ["blake2b"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
